--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-addr2line = >= 0.15.0"
+addr2line = ">= 0.15.0"
+Simple-Wayland-HotKey-Daemon = "<= 1.1.5"
